--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "sstream": "c",
         "streambuf": "c",
         "mavlink_core.h": "c",
-        "web_server.h": "c"
+        "web_server.h": "c",
+        "mavlink_linux.h": "c"
     }
 }
