--- a/files/Makefile
+++ b/files/Makefile
@@ -1,6 +1,6 @@
 all:
 	@echo "Generating embedded.c"
-	@./embed.py *.html images/*.svg */*.js */*.json */*.css */*.jpg */*.png */*.mjpg data/*.xml
+	@./embed.py *.html *.ico images/*.svg */*.js */*.json */*.css */*.jpg */*.png */*.mjpg data/*.xml
 	@echo "Generating manifest"
 	@./gen_manifest.sh
 	@echo "Generating version.h"
